# band-to-midi

./: .gitignore  LICENSE  README.md  gb_to_midi.py  pyproject.toml
tests/: create_test_midi.py  test_conversion.py
tests/fixtures/: test1_minimal_grand_piano.mid  test2_complex_3track.mid
tests/fixtures/test1_minimal_grand_pieano.band/Alternatives/000/: DisplayState.plist  MetaData.plist  ProjectData
tests/fixtures/test1_minimal_grand_pieano.band/Resources/: ProjectInformation.plist
tests/fixtures/test2_complex_3track.band/Alternatives/000/: DisplayStateArchive  MetaData.plist  ProjectData
tests/fixtures/test2_complex_3track.band/Resources/: ProjectInformation.plist
