[project]
name = "cimmering-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.7",
    "mido>=1.3.3",
    "music21>=10.1.0",
    "pretty-midi>=0.2.11",
    "pyfluidsynth>=1.3.4",
    "pylogic>=0.1.6",
    "scipy>=1.17.1",
]
